<resources>
    <string name="app_name">WhatsApp</string>
    <string name="welcome_text">welcome to whatsapp</string>
    <string name="login">login</string>
    <string name="create_account">Create Account</string>
    <string name="icon_img">icon description</string>
    <string name="hint_Email">Please Enter Your Email</string>
    <string name="hint_Password">Please Enter Your Password</string>
    <string name="hint_RePassword">Please Enter confirm Password</string>
    <string name="hint_Name">Please Enter Your Name</string>
    <string name="Logout">Logout</string>
    <string name="settings">settings</string>
    <string name="name">Name</string>
    <string name="default_name">Fatemeh Mohammadi</string>
    <string name="description_name">This is not your username or pin. This name will be visible to your WhatsApp contacts.</string>
    <string name="about">About</string>
    <string name="default_about">I am programmer...</string>
    <string name="email">Email</string>
    <string name="default_email">79f.mohammadi@gmail.com</string>
    <string name="default_PopUpdate">Please Enter Your </string>
    <string name="Update">Update </string>
    <string name="date">12:45 AM</string>
    <string name="textMessage">This is a test message</string>
    <string name="whatsapp">WhatsApp</string>


</resources>