<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007">


        <TextView
            android:id="@+id/popTitle"
            style="@style/Setting_title_default"
            android:layout_alignStart="@id/default_popUpdate"
            android:text="@string/about"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/default_popUpdate"
            style="@style/editText_Style"
            android:layout_below="@id/popTitle"
            android:hint="@string/default_PopUpdate"
            android:inputType="textPersonName"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_popChange"
            style="@style/button_Login_create_Style"
            android:layout_below="@id/default_popUpdate"
            android:layout_alignStart="@id/default_popUpdate"
            android:layout_alignEnd="@id/default_popUpdate"
            android:gravity="center"
            android:text="@string/Update" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>